# cisbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cisbench/: __init__.py  active.py  cli.py  crosswalk.py  defaults.py  engine.py  profile.py  sarif.py
demos/01-postgres-prod-audit/: SCENARIO.md  inventory.json
demos/02-mysql-dev-exposed/: SCENARIO.md  inventory.json
demos/03-cloud-managed-sqldb/: SCENARIO.md  inventory.json
demos/04-ci-release-gate/: SCENARIO.md  inventory.json
demos/05-pci-custom-profile/: SCENARIO.md  inventory.json  profile_payments.json
demos/06-sarif-code-scanning/: SCENARIO.md  inventory.json
demos/07-legacy-onprem-remediation/: SCENARIO.md  inventory.json  inventory_after_phase1.json
demos/08-airgapped-review/: SCENARIO.md  inventory.json
demos/09-nist-800-53-crosswalk/: SCENARIO.md  run.py
examples/: help.txt  inventory.json  inventory_hardened.json  list.txt  profile_minimal.json  version.txt
ports/: README.md
ports/go/: baseline.go  cisbench.go  cisbench_test.go  go.mod
ports/go/cmd/cisbench/: main.go
ports/node/: package.json
ports/node/src/: baseline.ts  cisbench.ts  cli.ts
ports/node/test/: cisbench.test.ts
ports/rust/: Cargo.toml
ports/rust/src/: baseline.rs  lib.rs  main.rs
tests/: test_active.py  test_active_cli.py  test_cli.py  test_crosswalk.py  test_datafeeds.py  test_demos.py  test_engine.py  test_feeds_cli.py  test_profile.py  test_sarif.py
tests/fixtures/feeds-cache/: oscal-800-53-rev5-catalog.data  oscal-800-53-rev5-catalog.meta.json
